--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,7 +25,10 @@
   },
   "homepage": "https://github.com/ntch2000/food-truck-chasers-production#readme",
   "dependencies": {
+    "concurrently": "^6.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.0"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.12.0",
+    "nodemon": "^2.0.7"
   }
 }
