--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "concurrently": "^6.0.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.12.0",
+    "mongoose": "^5.12.7",
+    "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^2.0.7"
   }
 }
